SPRINT 3 -Limpiando el controlador TrabajoDeGradoController -Agregando primera vista para coordinador

--- a/web/director/vista-director.xhtml
+++ b/web/director/vista-director.xhtml
@@ -42,6 +42,7 @@
                         <p:submenu label="Perfiles" style="background-color: white">
                             <p:menuitem value="Director" outcome="vista-director" style="background-color: #c2dfef" />
                             <p:menuitem value="Jefe de Departamento" outcome="./../jefe-de-departamento/vista-jefe-de-departamento.xhtml" />                            
+                            <p:menuitem value="Coordinador" outcome="./../coordinador/vista-coordinador.xhtml" />
                         </p:submenu>                                
                     </p:menu>
 
