--- a/web/jefe-de-departamento/vista-jefe-de-departamento.xhtml
+++ b/web/jefe-de-departamento/vista-jefe-de-departamento.xhtml
@@ -29,6 +29,7 @@
                         <p:submenu label="Perfiles" style="background-color: white">
                             <p:menuitem value="Director" outcome="./../director/vista-director.xhtml" />
                             <p:menuitem value="Jefe de Departamento" outcome="vista-jefe-de-departamento" style="background-color: #c2dfef"/>
+                            <p:menuitem value="Coordinador" outcome="./../coordinador/vista-coordinador.xhtml" />
                         </p:submenu>                                
                     </p:menu>
                     
