SPRINT 3 -Limpiando el controlador TrabajoDeGradoController -Terminado asignacion de docentes y envio de correo a evaluadores -Modificando colores de la fachada.

--- a/web/director/vista-director.xhtml
+++ b/web/director/vista-director.xhtml
@@ -38,8 +38,8 @@
                 </p:dialog>
 
                 <h:form id="form">
-                    <p:menu styleClass="menuizqroles" style="background-color: white">
-                        <p:submenu label="Perfiles" style="background-color: white">
+                    <p:menu styleClass="menuizqroles">
+                        <p:submenu label="Perfiles" style="background-color: lightcyan">
                             <p:menuitem value="Director" outcome="vista-director" style="background-color: #c2dfef" />
                             <p:menuitem value="Jefe de Departamento" outcome="./../jefe-de-departamento/vista-jefe-de-departamento.xhtml" />                            
                             <p:menuitem value="Coordinador" outcome="./../coordinador/vista-coordinador.xhtml" />
